--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,28 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres
-    restart: always
+    image: postgres:latest
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    ports:
-      - "5432:5432"
+
 
     networks:
       - main
 
+    ports:
+      - "5432:5432"
+
+    restart: always
+
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  #    container_name: postgres
-#    image: postgres:latest
-#    environment:
-#      - POSTGRES_DB=postgres
-#      - POSTGRES_USER=postgres
-#      - POSTGRES_PASSWORD=postgres
-#    networks:
-#      - main
-#    ports:
-#      - "5432:5432"
-#    restart: always
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
   app:
     build: .
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
-#    command: bash -c "python manage.py migrate && gunicorn myproject.wsgi:application -b 0.0.0.0:8000"
+#    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py migrate && gunicorn Food.wsgi:application -b 0.0.0.0:8000"
     container_name: app
     volumes:
       - .:/code/
